tests/algorithms/x/Clojure/data_structures/heap/binomial_heap.out
Syntax error (UnsupportedOperationException) compiling recur at (/workspace/mochi/tests/algorithms/x/Clojure/data_structures/heap/binomial_heap.clj:74:270).
Can only recur from tail position

Full report at:
/tmp/clojure-11304074967202844490.edn